# API-Client-RestForge

./: .gitignore  README.md  WARP.md  generate-icon.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: CollectionsManager.tsx  CurlDialog.tsx  HistoryManager.tsx  JsonViewer.tsx  KeyValueEditor.tsx  Layout.tsx  Logo.tsx  RequestPanel.tsx  ResizablePanels.tsx  ResponseViewer.tsx  Sidebar.tsx  TabBar.tsx  Toast.tsx
src/contexts/: ToastContext.tsx
src/hooks/: useKeyboardShortcuts.ts
src/stores/: collectionsStore.ts  environmentsStore.ts  historyStore.ts  settingsStore.ts  tabsStore.ts
src/types/: index.ts
src/utils/: curlUtils.ts  httpClient.ts  requestUtils.ts
